对首页进行了部分调整

--- a/config.toml
+++ b/config.toml
@@ -146,9 +146,9 @@ enableEmoji = true
           # 主页显示头像的 URL
           avatarURL = "/images/avatar.png"
           # 主页显示的网站标题 (支持 HTML 格式)
-          title = " Zion"
+          title = "Zion <i class='far fa-kiss-wink-heart fa-fw'></i>"
           # 主页显示的网站副标题
-          subtitle = "To see the world as it is, and to love it. "
+          subtitle = "To see the world as it is, and to love it"
           # 是否为副标题显示打字机动画
           typeit = true
           # 是否显示社交账号
@@ -182,7 +182,7 @@ enableEmoji = true
         FreeCodeCamp = ""
         Bitbucket = ""
         Stackoverflow = ""
-        Weibo = ""
+        Weibo = "ivan0101"
         Odnoklassniki = ""
         VK = ""
         Flickr = ""
@@ -267,10 +267,10 @@ enableEmoji = true
       name = " 暗淡蓝点 "
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
-      pre = "<i class='far fa-kiss-wink-heart fa-fw'></i>"
+      pre = "<i class='far fa-dog fa-fw'></i>"
       # you can add extra information after the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
-      post = " Why so serious? "
+      post = ""
       # whether to use typeit animation for title name
       # 是否为标题显示打字机动画
       typeit = true
@@ -281,7 +281,7 @@ enableEmoji = true
     enable = true
     # Custom content (HTML format is supported)
     # 自定义内容 (支持 HTML 格式)
-    custom = ''
+    custom = 'Made by Zion with 💖 in China'
     # whether to show Hugo and theme info
     # 是否显示 Hugo 和主题信息
     hugo = false
@@ -290,7 +290,7 @@ enableEmoji = true
     copyright = true
     # whether to show the author
     # 是否显示作者
-    author = true
+    author = false
     # site creation time
     # 网站创立年份
     since = 2020
@@ -426,7 +426,7 @@ enableEmoji = true
       enable = true
       Twitter = true
       Facebook = false
-      Linkedin = false
+      Linkedin = true
       Whatsapp = false
       Pinterest = false
       Tumblr = false
@@ -436,7 +436,7 @@ enableEmoji = true
       Buffer = false
       Xing = false
       Line = true
-      Instapaper = false
+      Instapaper = true
       Pocket = true
       Digg = false
       Stumbleupon = false
@@ -447,8 +447,8 @@ enableEmoji = true
       Blogger = false
       Baidu = false
       Odnoklassniki = false
-      Evernote = false
-      Skype = false
+      Evernote = true
+      Skype = true
       Trello = false
       Mix = false
     # Comment config
