修改底部信息，并全局排除.DS_Store文件

--- a/config.toml
+++ b/config.toml
@@ -281,7 +281,7 @@ enableEmoji = true
     enable = true
     # Custom content (HTML format is supported)
     # 自定义内容 (支持 HTML 格式)
-    custom = 'Made by Zion with 💖 in China'
+    custom = 'Made with 💖 by <a href = "https://likeadog.me"><b><u>Zion</u></b></a>'
     # whether to show Hugo and theme info
     # 是否显示 Hugo 和主题信息
     hugo = false
