--- a/config.toml
+++ b/config.toml
@@ -167,7 +167,7 @@ enableEmoji = true
         Twitter = ""
         Instagram = "mr_likeadog"
         Facebook = ""
-        Telegram = ""
+        Telegram = "Mr_likeadog"
         Medium = ""
         Gitlab = ""
         Youtubelegacy = ""
