调整评论系统

--- a/config.toml
+++ b/config.toml
@@ -474,8 +474,8 @@ enableEmoji = true
       # Valine 评论系统设置 (https://github.com/xCss/Valine)
       [params.page.comment.valine]
         enable = true
-        appId = "QGzwQXOqs5JOhN4RGPOkR2mR-MdYXbMMI"
-        appKey = "WBmoGyJtbqUswvfLh6L8iEBr"
+        appId = "6zvj3mySb5RPlreG0uLK5XJi-9Nh9j0Va"
+        appKey = "233jR61jmO5S8azvILfquU03"
         placeholder = ""
         avatar = "mp"
         meta= ""
@@ -484,8 +484,8 @@ enableEmoji = true
         visitor = true
         recordIP = true
         highlight = true
-        enableQQ = false
-        serverURLs = "https://leancloud.hugoloveit.com"
+        enableQQ = true
+        serverURLs = ""
         # emoji data file name, default is "google.yml"
         # ("apple.yml", "google.yml", "facebook.yml", "twitter.yml")
         # located in "themes/LoveIt/assets/data/emoji/" directory
