删除导航栏的文档入口

--- a/config.toml
+++ b/config.toml
@@ -71,13 +71,13 @@ enableEmoji = true
         url = "/categories/"
         title = ""
         weight = 3
-      [[languages.zh-cn.menu.main]]
-        identifier = "documentation"
-        pre = ""
-        name = "文档"
-        url = "/categories/documentation/"
-        title = ""
-        weight = 4
+      # [[languages.zh-cn.menu.main]]
+      #  identifier = "documentation"
+      #  pre = ""
+      #  name = "文档"
+      #  url = "/categories/documentation/"
+      #  title = ""
+      #  weight = 4
       [[languages.zh-cn.menu.main]]
         identifier = "about"
         pre = ""
@@ -85,7 +85,7 @@ enableEmoji = true
         name = "关于"
         url = "/about/"
         title = ""
-        weight = 5
+        weight = 4
       # [[languages.zh-cn.menu.main]]
       #   identifier = "github"
       #   pre = "<i class='fab fa-github fa-fw'></i>"
